--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Priority: optional
 Build-Depends:
  debhelper-compat (= 13),
  dh-python,
+ perl,
  python3,
  python3-setuptools,
  python3-uritools,
